--- a/plugin/index.html
+++ b/plugin/index.html
@@ -9,19 +9,19 @@
 
 <body>
 
-  <video id="myPlayerID"
+  <video-js id="myPlayerID"
     data-account="1752604059001"
     data-player="rJkU7xvKZ"
     data-embed="default"
     data-application-id
     class="video-js"
-    controls></video>
-  <script src="//players.brightcove.net/1752604059001/rJkU7xvKZ_default/index.min.js"></script>
+    controls></video-js>
+  <script src="https://players.brightcove.net/1752604059001/rJkU7xvKZ_default/index.min.js"></script>
 
   <script src="kiosk-app.js"></script>
 
   <script type="text/javascript">
-    videojs('myPlayerID').ready(function(){
+    videojs.getPlayer('myPlayerID').ready(function() {
       var myPlayer = this;
       myPlayer.kioskApp();
     });
