--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
 
-  <video id="myPlayerID"
+  <video-js id="myPlayerID"
     data-account="1752604059001"
     data-player="rJkU7xvKZ"
     data-embed="default"
     data-application-id
     class="video-js"
-    controls></video>
-  <script src="//players.brightcove.net/1752604059001/rJkU7xvKZ_default/index.min.js"></script>
+    controls></video-js>
+  <script src="https://players.brightcove.net/1752604059001/rJkU7xvKZ_default/index.min.js"></script>
 
   <script type="text/javascript">
   var myPlayer,
@@ -37,7 +37,7 @@
   options.proxyURL = "https://solutions.brightcove.com/bcls/bcls-proxy/brightcove-learning-proxy-v2.php";
   options.requestType = "GET";
 
-  videojs("myPlayerID").ready(function () {
+  videojs.getPlayer('myPlayerID').ready(function() {
     myPlayer = this;
     // Define key variables
     var videoIDs = [],
